Pushing theme changes for loader component

--- a/src/styles/Loader.css
+++ b/src/styles/Loader.css
@@ -10,3 +10,15 @@
     justify-content: center;
     align-items: center;
 }
+
+.loader-text {
+    text-align: center;
+}
+
+.loader-overlay.dark {
+    background-color: black;
+}
+
+.loader-text.dark {
+    color: #6e6e6e;
+}
